[package]
name = "tty_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bollard = "0.15.0"
crossterm = "0.27.0"
futures-util = "0.3.29"
ratatui = "0.24.0"
termion = "2.0.1"
tokio = {version = "1.33", features=["full"]}
